--- a/src/Components/ShipmentDetails/ShipmentTable/BookingSummary/ShipmentSummary.css
+++ b/src/Components/ShipmentDetails/ShipmentTable/BookingSummary/ShipmentSummary.css
@@ -90,6 +90,9 @@
     letter-spacing: .01em;
     font-size: 16px;
     line-height: 24px;
+    position: sticky;
+    top: 0px;
+    z-index: 100 !important;
 }
 
 /* This is for container details overflow*/
