--- a/src/Components/Shipments/ShipBookingTabs.css
+++ b/src/Components/Shipments/ShipBookingTabs.css
@@ -166,3 +166,19 @@
   padding: 0;
 }
 
+.custom-button {
+  border: 1px solid rgb(231, 234, 240);
+  background-color: transparent;
+  padding: 2px 6px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  font-size: 14px;
+  border-radius: 4px;
+}
+
+.custom-button:hover {
+  background-color: #cfd6df; 
+}
+.selectBtn{
+  background-color: #cfd6df; 
+}
